--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7248397702:AAE6bW6HSbe0D8mW0sCV7TYHq1ASTi9DVdM"                              # Require restart after changing it while bot running
+OWNER_ID = "5631563685"                               # Require restart after changing it while bot running
+TELEGRAM_API = "20075953"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "491b4a705f7cf2a933576b6624e91120"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://devta:frienddev@freind11.apteeqa.mongodb.net/"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
