--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # Remove this line before deploying
 
 # REQUIRED CONFIG
-BOT_TOKEN = "7363171435:AAGeWfdTHwhAkWu8Pa4MLVfFSS-EzyIEE8Q"                              # Require restart after changing it while bot running
-OWNER_ID = "5631563685"                               # Require restart after changing it while bot running
+BOT_TOKEN = "7171428829:AAGIf6PxLuLTv-Pq4zdvu9rbF3zNX9qgfZg"                              # Require restart after changing it while bot running
+OWNER_ID = "-1002093247039"                               # Require restart after changing it while bot running
 TELEGRAM_API = "20075953"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "491b4a705f7cf2a933576b6624e91120"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
