--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
 # Remove this line before deploying
 
 # REQUIRED CONFIG
-BOT_TOKEN = "7171428829:AAGIf6PxLuLTv-Pq4zdvu9rbF3zNX9qgfZg"                              # Require restart after changing it while bot running
-OWNER_ID = "-1002093247039"                               # Require restart after changing it while bot running
+BOT_TOKEN = "6323217076:AAHY1AU_RXWtb6E_UkN86xLMd71FIeOBazY"                              # Require restart after changing it while bot running
+OWNER_ID = "6352107773"                               # Require restart after changing it while bot running
 TELEGRAM_API = "20075953"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "491b4a705f7cf2a933576b6624e91120"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://devta:frienddev@freind11.apteeqa.mongodb.net/"                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://BADMUNDA:BADMYDAD@badhacker.i5nw9na.mongodb.net/"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
